# OSRS_automation

./: requirements.txt  setup.cfg
src/osrs_navigator/: Navigator.py  PathFinder.py  helpers.py  main.py
